(general) Fix mouse-hover style on mobile page logo

--- a/astrobin/static/astrobin/scss/astrobin-mobile.scss
+++ b/astrobin/static/astrobin/scss/astrobin-mobile.scss
@@ -20,13 +20,6 @@
     left: 70px;
     opacity: .25;
 
-
-    &:hover, &:focus, &:active {
-      color: $grey-2;
-      text-shadow: none;
-      top: 11px;
-    }
-
     &.ten-year-anniversary {
       font-size: 24px;
       line-height: 42px;
